# token-list

./: CONTRIBUTING.md  pyproject.toml  tokenlist-mainnet.json
mainnet/BANK/: data.json
mainnet/GBPm/: data.json
mainnet/USD*/: data.json
mainnet/USDm/: data.json
mainnet/YZM/: data.json
mainnet/cbBTC/: data.json
mainnet/eBTC/: data.json
mainnet/earnMON/: data.json
mainnet/enzoBTC/: data.json
mainnet/mHyperBTC/: data.json
mainnet/rETH/: data.json
npm/: package.json
scripts/: validate_tokens.py
scripts/utils/: web3.py
